# Speech

./: .gitattributes  CMakeLists.txt
uplugin_speech/: CMakeLists.txt  dllmain.cpp
